force-app/main/default/objects/Garage__c/fields/Garage_ID__c.field-meta.xml
<CustomField>
    <fullName>Garage_ID__c</fullName>
    <displayFormat>G-{000000}</displayFormat>
    <label>Garage ID</label>
    <type>AutoNumber</type>
</CustomField>