force-app/main/default/objects/Garage__c/fields/Next_Closest_Neighboring_Garage_ID__c.field-meta.xml
<CustomField>
    <fullName>Next_Closest_Neighboring_Garage_ID__c</fullName>
    <label>Next Closest Neighboring Garage ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>